--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: hellowillmcfadden
+application: healthconnect
 version: 1
 runtime: python27
 api_version: 1
@@ -11,13 +11,9 @@ handlers:
 
 - url: /js
   static_dir: js
-  
-- url: /im
-  static_dir: im
-  
+
 - url: /css
   static_dir: css
-  
+
 - url: /
   static_dir: html
-  
