--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,10 @@ handlers:
   static_files: html/index.html
   upload: html/index.html
 
+- url: /analysis
+  static_files: html/analysis.html
+  upload: html/analysis.html
+
 - url: /js
   static_dir: js
 
